Fix: `ColonyMeta` properly truncate and and show settings

--- a/src/modules/dashboard/components/ColonyHome/ColonyMeta/ColonyMeta.css
+++ b/src/modules/dashboard/components/ColonyHome/ColonyMeta/ColonyMeta.css
@@ -12,7 +12,6 @@
 }
 
 .headingWrapper {
-  composes: multiLineEllipsis from '~styles/text.css';
 }
 
 .description {
